bin/nohup.out
  File "/opt/skynet/bin/skynetd.py", line 224
    double_streamer("HVAC_HystTemp","%.1f" % hyst_temp)
                  ^
SyntaxError: invalid syntax
  File "/opt/skynet/bin/skynetd.py", line 224
    double_streamer("HVAC_HystTemp","%.1f" % hyst_temp)
                  ^
SyntaxError: invalid syntax
  File "/opt/skynet/bin/skynetd.py", line 731
    text_file.write(str(HEAT_times[0]) + "\n)
                                            ^
SyntaxError: EOL while scanning string literal
